More test fixes First attempt at parsing property chains Need to implement expectListWithSep("p", "o")